--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -2,6 +2,6 @@
 
 :javascript
   $(function() {
-    window.router = new Gandalf.Routers.Router();
+    window.router = new Gandalf.Router();
     Backbone.history.start();
   });
