--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,8 +1,42 @@
-body {
-  background-color: lightblue;
-}
+//Mixins
+@font-face { font-family: HN; src: url('/assets/helveticaneue.otf'); } 
+@font-face { font-family: HNBold; src: url('/assets/helveticaneuebold.otf'); }
+@font-face { font-family: HNLight; src: url('/assets/helveticaneuelight.otf'); }
+@font-face { font-family: HNMedium; src: url('/assets/helveticaneuemedium.otf'); } 
+$yellow: rgba(255,203,5,1);
+$blue: rgba(31,188,255,1);
 
-.container {
-  width: 960px;
-  margin: auto;
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: HN;
+  .header {
+    width: 100%;
+    height: 60px;
+    background: $blue;
+    .wrapper {
+      width: 960px;
+      margin: auto;
+      #logo {
+        a {
+          color: white;
+          font-family: HNLight;
+          font-size: 20px;
+          line-height: 60px;
+          text-decoration: none;
+          -webkit-transition: 0.2s;
+          -moz-transition: 0.2s;
+        }
+        &:hover {
+          a {
+            border-bottom: 3px solid white;
+          }
+        }
+      }
+    }
+  }
+  .container {
+    width: 960px;
+    margin: auto;
+  }
 }
