--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,3 @@
-<% # Layout for just the splash page %>
-
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" xmlns:fb="http://ogp.me/ns/fb#"> <![endif]-->
@@ -14,6 +12,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<div class="header">
+  <div class="wrapper">
+    <div id="logo"><a href="/">Yale Events</a></div>
+  </div>
+</div>
 
 <%= yield %>
 
