--- a/app/views/main/welcome.html.haml
+++ b/app/views/main/welcome.html.haml
@@ -4,5 +4,5 @@
   - # Placeholder code
   %p= "pw: #{ENV['CAS_PASS']}"
   %p= "netid: #{ENV['CAS_NETID']}"
-
-  %a{:href => "/feed"} See your feed!
+  
+  %p You're not logged in yet. Login at the top right.
