--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -18,6 +18,7 @@ body {
       width: 960px;
       margin: auto;
       #logo {
+        float: left;
         a {
           color: white;
           font-family: HNLight;
@@ -32,6 +33,10 @@ body {
             border-bottom: 3px solid white;
           }
         }
+      }
+      #menu {
+        float: right;
+        
       }
     }
   }
