--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,14 @@
 <div class="header">
   <div class="wrapper">
     <div id="logo"><a href="/">Yale Events</a></div>
+    <% if current_user %>
+      <div class="link"><a href="/#browse">Browse</a></div>
+      <div class="link"><a href="/#feed">Your Feed</a></div>
+      <div class="link"><a href="/#about">About</a></div>
+    <% end %>
     <div id="menu">
       <% if current_user %>
-        <%= current_user.name %>
+        <a href="#preferences"><%= current_user.name %></a>
         <a href="/logout">Logout</a>
       <% else %>
         <a href="/login">Login</a>
