--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body>
 
 <div class="header">
-  <div class="wrapper">
+  <div class="container">
     <div id="logo"><a href="/">Yale Events</a></div>
     <% if current_user %>
       <div class="link"><a href="/#browse">Browse</a></div>
