--- a/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
@@ -1,3 +1,7 @@
 <div class="container">
-  <h5>This is browse. It's where you discover events, organizations, and categories.</h5>
+  <div class="left">
+  </div>
+  <div class="middle">
+    <h5>This is browse. It's where you discover events, organizations, and categories.</h5>
+  </div>
 </div>
