--- a/app/assets/javascripts/backbone/templates/static/about.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/static/about.jst.ejs
@@ -1,3 +1,7 @@
 <div class="container">
-  <h5>About Page</h5>
+  <div class="left">
+  </div>
+  <div class="middle">
+    <h5>About Page</h5>
+  </div>
 </div>
