--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -23,9 +23,12 @@ body {
   width: 100%;
   height: 60px;
   background: $blue;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 .container {
-  width: 960px;
+  width: 100%;
   margin: auto;
   .link {
     float: left;
@@ -36,6 +39,7 @@ body {
 
 #logo {
   float: left;
+  padding-left: 15px;
   a {
     color: white;
     font-family: HNLight;
@@ -53,4 +57,23 @@ body {
 #menu {
   float: right;
   line-height: 60px;
+  padding-right: 15px;
+}
+.left {
+  position: fixed;
+  top: 60px;
+  left: 0px;
+  width: 400px;
+  border-right: 1px solid #eee;
+  height: 100%;
+}
+.middle {
+  margin-top: 60px;
+  margin-left: 400px;
+}
+.right {
+  position: fixed;
+  top: 60px;
+  right: 0px;
+  width: 300px;
 }
