as_json and rake tasks

--- a/app/assets/javascripts/backbone/templates/users/preferences.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/users/preferences.jst.ejs
@@ -1,3 +1,7 @@
 <div class="container">
-  <h5>These are your preferences. You can handle subscription options here.</h5>
+  <div class="left">
+  </div>
+  <div class="middle">
+    <h5>These are your preferences. You can handle subscription options here.</h5>
+  </div>
 </div>
