--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -19,9 +19,14 @@ body {
   padding: 0px;
   font-family: HN;
 }
+.wrapper {
+  width: 100%;
+  min-width: 700px;
+}
 .header {
   width: 100%;
-  height: 60px;
+  min-width: 700px;
+  height: 50px;
   background: $blue;
   position: fixed;
   top: 0px;
@@ -32,7 +37,7 @@ body {
   margin: auto;
   .link {
     float: left;
-    line-height: 60px;
+    line-height: 50px;
     margin-left: 15px;
   }
 }
@@ -44,7 +49,7 @@ body {
     color: white;
     font-family: HNLight;
     font-size: 20px;
-    line-height: 60px;
+    line-height: 50px;
     text-decoration: none;
     // Use bourbon here!
     @include transition(all 0.2s);
@@ -56,24 +61,24 @@ body {
 
 #menu {
   float: right;
-  line-height: 60px;
+  line-height: 50px;
   padding-right: 15px;
 }
 .left {
   position: fixed;
-  top: 60px;
+  top: 50px;
   left: 0px;
-  width: 400px;
+  width: 300px;
   border-right: 1px solid #eee;
   height: 100%;
 }
 .middle {
-  margin-top: 60px;
-  margin-left: 400px;
+  margin-top: 50px;
+  margin-left: 301px;
 }
 .right {
   position: fixed;
-  top: 60px;
+  top: 50px;
   right: 0px;
   width: 300px;
 }
