--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,27 +12,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<div class="header">
-  <div class="container">
-    <div id="logo"><a href="/">Yale Events</a></div>
-    <% if current_user %>
-      <div class="link"><a href="/#browse">Browse</a></div>
-      <div class="link"><a href="/#feed">Your Feed</a></div>
-      <div class="link"><a href="/#about">About</a></div>
-    <% end %>
-    <div id="menu">
+<div class="wrapper">
+  <div class="header">
+    <div class="container">
+      <div id="logo"><a href="/">Yale Events</a></div>
       <% if current_user %>
-        <a href="#preferences"><%= current_user.name %></a>
-        <a href="/logout">Logout</a>
-      <% else %>
-        <a href="/login">Login</a>
+        <div class="link"><a href="/#browse">Browse</a></div>
+        <div class="link"><a href="/#feed">Your Feed</a></div>
+        <div class="link"><a href="/#organizations">Organizations</a></div>
+        <div class="link"><a href="/#about">About</a></div>
       <% end %>
+      <div id="menu">
+        <% if current_user %>
+          <a href="#preferences"><%= current_user.name %></a>
+          <a href="/logout">Logout</a>
+        <% else %>
+          <a href="/login">Login</a>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
 
-<%= yield %>
+  <%= yield %>
+</div>
 
 </body>
 </html>
