--- a/app/assets/javascripts/backbone/templates/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/show.jst.ejs
@@ -1,4 +1,8 @@
 <div class="event">
-  <%= event.name %>
-  <%= time %>
+  <div class="organization"><%= event.organization %></div>
+  <div class="time"><%= time %></div>
+  <div class="details">
+    <div class="name"><%= event.name %></div>
+    <div class="location"><%= event.location %></div>
+  </div>
 </div>
