--- a/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
@@ -1,7 +1,5 @@
-<div class="container">
-  <div class="left">
-  </div>
-  <div class="middle">
-    <h5>This is browse. It's where you discover events, organizations, and categories.</h5>
-  </div>
+<div class="sidebar">
+</div>
+<div class="main">
+  <h5>This is browse. It's where you discover events, organizations, and categories.</h5>
 </div>
