--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="left">
+  <div class="sidebar">
     <div id="events_list"></div>
   </div>
-  <div class="middle">
+  <div class="main">
     <h5>This is your feed. All events that are part of organizations or categories you subscribe to will go here.</h5>
   </div>
 </div>
