--- a/app/assets/javascripts/backbone/templates/static/about.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/static/about.jst.ejs
@@ -1,7 +1,5 @@
-<div class="container">
-  <div class="left">
-  </div>
-  <div class="middle">
-    <h5>About Page</h5>
-  </div>
+<div class="sidebar">
+</div>
+<div class="main">
+  <h5>About Page</h5>
 </div>
