--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,8 +1,11 @@
 <div class="container">
   <div class="left">
+    <div id="subscriptions_list"></div>
+  </div>
+  <div class="feed">
     <div id="events_list"></div>
   </div>
   <div class="middle">
-    <h5>This is your feed. All events that are part of organizations or categories you subscribe to will go here.</h5>
+    Calendar
   </div>
 </div>
