--- a/app/assets/javascripts/backbone/templates/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/show.jst.ejs
@@ -1,4 +1,4 @@
-<div class="event">
+<div class="feed_event">
   <div class="organization"><%= event.organization %></div>
   <div class="time"><%= time %></div>
   <div class="details">
