--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -5,7 +5,7 @@
   <div class="feed">
     <div id="events_list"></div>
   </div>
-  <div class="main">
+  <div class="calendar">
     Calendar
   </div>
 </div>
