--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,5 +1,8 @@
 <div class="sidebar">
-  <div id="subscriptions_list"></div>
+  <div class="sidebar_label">Subscribed Organizations:</div>
+  <div id="subscribed_organizations_list"></div>
+  <div class="sidebar_label">Subscribed Categories:</div>
+  <div id="subscribed_categories_list"></div>
 </div>
 <div class="feed">
   <div id="events_list"></div>
