calendar in header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div id="logo"><a href="/">Yale Events</a></div>
     <% if current_user %>
       <div class="link"><a href="/#browse">Browse</a></div>
-      <div class="link"><a href="/#feed">Your Feed</a></div>
+      <div class="link"><a href="/#calendar">Calendar</a></div>
       <div class="link"><a href="/#organizations">Organizations</a></div>
       <div class="link"><a href="/#about">About</a></div>
     <% end %>
