routes and organizations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 <!--[if gt IE 8]><!--><html xmlns:fb="http://ogp.me/ns/fb#"><!--<![endif]-->
 <head>
   <title>Yale Events</title>
-  <!--<%= stylesheet_link_tag "https://raw.github.com/necolas/normalize.css/master/normalize.css", :media => "all" %>-->
+  <%= stylesheet_link_tag "https://raw.github.com/necolas/normalize.css/master/normalize.css", :media => "all" %>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
