--- a/app/assets/javascripts/backbone/templates/events/week_calendar.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/week_calendar.jst.ejs
@@ -1,2 +1,14 @@
-<div class="cal <%= tag %> week-cal">
+<div class="cal week-cal">
+  <div class="cal-header">
+    <div class="cal-day"><%= start_date.format("MM / DD") %></div>
+    <div class="cal-day"><%= start_date.add('d', 1).format("MM / DD") %></div>
+    <div class="cal-day"><%= start_date.add('d', 2).format("MM / DD") %></div>
+    <div class="cal-day"><%= start_date.add('d', 3).format("MM / DD") %></div>
+    <div class="cal-day"><%= start_date.add('d', 4).format("MM / DD") %></div>
+    <div class="cal-day"><%= start_date.add('d', 5).format("MM / DD") %></div>
+    <div class="cal-day"><%= start_date.add('d', 6).format("MM / DD") %></div> 
+  </div>
+  <div id="cal-body">
+
+  </div>
 </div>
