--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -7,6 +7,5 @@
 <div class="feed">
   <div id="events_list"></div>
 </div>
-<div class="calendar">
-  <div id="calendar-container"></div>
+<div class="calendar" id="calendar-container">
 </div>
