--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,18 @@
+@mixin calc-width($params...) {
+  width: -moz-calc($params);
+  width: -webkit-calc($params);
+  width: -o-calc($params);
+  width: calc($params);
+}
+@mixin calc-height($params...) {
+  height: -moz-calc($params);
+  height: -webkit-calc($params);
+  height: -o-calc($params);
+  height: calc($params);
+}
+
 @import "bourbon";
+@import "bootstrap";
 @import "main";
 @import "feed";
 @import "organizations";
