lots of styling

--- a/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="left">
 </div>
 <div class="main">
   <h5>This is browse. It's where you discover events, organizations, and categories.</h5>
