--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -4,8 +4,7 @@
   <div class="sidebar_label">Subscribed Categories:</div>
   <div id="subscribed_categories_list"></div>
 </div>
-<div class="feed">
-  <div id="events_list"></div>
+<div class="feed" id="feed-list">
 </div>
 <div class="calendar" id="calendar-container">
 </div>
