--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -1,91 +1,7 @@
-/* ========== LAYOUT ========= */
-
-$sidebar_width: 150px;
-$feed_width: 250px;
-
-.sidebar, .feed, .calendar {
-  position: absolute;
-  top: $header_height;
-  height: -webkit-calc(100% - 50px);
-  height: -o-calc(100% - 50px);
-  height: -moz-calc(100% - 50px);
-  height: calc(100% - 50px);
-}
-
-.sidebar {
-  left: 0;
-  width: $sidebar_width;
-  overflow: scroll;
-  @include linear-gradient(#888, #666);
-}
-
-.feed {
-  left: $sidebar_width;
-  width: $feed_width;
-  overflow: scroll;
-}
-$calendar_left: $sidebar_width + $feed_width;
-
-.calendar {
-  left: $calendar_left;
-  width: -moz-calc(100% - 500px);
-  width: -webkit-calc(100% - 500px);
-  width: -o-calc(100% - 500px);
-  width: calc(100% - 500px);
-  min-width: 500px;
-}
-
-/* ========= CALENDAR ======== */
-
-.cal {
-  width: 100%;
-  height: 100%;
-  overflow: scroll;
-  display: table;
-}
-
-.cal-header, #cal-body {
-  display: table-row;
-}
-.cal-header {
-  height: 5%;
-  text-align: center;
-  font-size: 8px;
-  border-bottom: 1pt solid #aaa;
-}
-#cal-body {
-  border-top: 1pt solid #aaa;
-  height: 95%;
-}
-
-.cal-day {
-  display: table-cell;
-  border-right: 1pt solid #ddd;
-  &:last-child {
-    border-right: none;
-  }
-}
-
-.cal-week {
-  .cal-day {
-    
-  }
-}
-
-.cal-month {
-  .cal-day {
-
-  }
-}
 
 /* ====== FEED ==== */
-.feed {
-  left: 200px;
-  width: 300px;
-  border-left: 1px solid #eee;
-  border-right: 1px solid #eee;
-}
-.day_header {
+
+.feed-day-header {
   border-top: 1px solid #dadada;
   border-bottom: 1px solid #dadada;
   background: #EEE;
@@ -93,35 +9,37 @@ $calendar_left: $sidebar_width + $feed_width;
   font-size: 14px;
 }
 
-.feed_event {
+.feed-event {
   padding: 5px 10px;
   border-bottom: 1px solid #eee;
-  .organization {
-    padding-left: 80px;
-    font-size: 13px;
-    font-family: HNLight;
-    width: 200px;
+  &:last-child {
+    border-bottom: none;
   }
+  font-size: 0;
   .time {
-    width: 80px;
-    float: left;
-    font-size: 15px;
-    line-height: 23px;
+    width: 30%;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 14px;
     color: #333;
   }
   .details {
-    width: 200px;
-    margin-left: 80px;
-    .name {
-      font-size: 15px;
-      color: #333;
-      line-height: 23px;
-      font-family: HNBold;
-    }
-    .location {
-      font-family: HNLight;
-      font-size: 13px;
-    }
+    width: 65%;
+    margin-left: 5%;
+    vertical-align: middle;
+    height: 100%;
+    display: inline-block;
+  }
+  .name {
+    font-size: 15px;
+    color: #333;
+    line-height: 23px;
+    font-family: HNBold;
+  }
+  .location, .organization {
+    font-size: 13px;
+    font-family: HNLight;
   }
 }
 
