--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -65,10 +65,11 @@ $cal_gap: 40px;
   top: 0;
   left: 0;
 }
-
+$cal_z: 10;
 .cal-event {
   position: absolute;
-  z-index: 10;
+  left: 0;
+  z-index: $cal_z;
   border: 1pt solid #aaa;
   background-color: rgba(200,200,200,0.7);
   @include transition(background-color 0.2s);
@@ -76,7 +77,7 @@ $cal_gap: 40px;
   font-size: 8px;
   line-height: 12px;
   overflow: hidden;
-  width: 98%;
+  width: 97%;
   p {
     margin: 0 3px;
     &:first-child {
@@ -84,6 +85,40 @@ $cal_gap: 40px;
     }
   }
   &:hover {
-    background-color: rgba(150,150,150,0.7);
+    background-color: rgba(150,150,150,0.9);
+  }
+}
+
+.overlap-2 {
+  width: 50%;
+  &.overlap-order-1 {
+    left: 47%;
+    z-index: $cal_z - 1;
+  }
+}
+.overlap-3 {
+  width: 35%;
+  &.overlap-order-1 {
+    left: 31%;
+    z-index: $cal_z - 1;
+  }
+  &.overlap-order-2 {
+    left: 62%;
+    z-index: $cal_z - 2;
+  }
+}
+.overlap-4 {
+  width: 25%;
+  &.overlap-order-1 {
+    left: 24%;
+    z-index: $cal_z - 1;
+  }
+  &.overlap-order-2 {
+    left: 48%;
+    z-index: $cal_z - 2;
+  }
+  &.overlap-order-3 {
+    left: 72%;
+    z-index: $cal_z - 3;
   }
 }
