--- a/app/assets/javascripts/backbone/templates/events/feed_event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/feed_event.jst.ejs
@@ -1,4 +1,4 @@
-<div class="time"><%= start_time %> -<%= end_time %></div>
+<div class="time"><%= startTime %> -<%= endTime %></div>
 <div class="details">
   <div class="feed-left"></div>
   <div class="organization"><%= event.organization %></div>
