--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,8 +1,8 @@
 <div class="sidebar">
-  <div class="sidebar_label">Subscribed Organizations:</div>
-  <div id="subscribed_organizations_list"></div>
-  <div class="sidebar_label">Subscribed Categories:</div>
-  <div id="subscribed_categories_list"></div>
+  <div class="sidebar-label">Subscribed Organizations:</div>
+  <div id="subscribed-organizations-list"></div>
+  <div class="sidebar-label">Subscribed Categories:</div>
+  <div id="subscribed-categories-list"></div>
 </div>
 <div class="feed" id="feed-list">
 </div>
