--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -106,8 +106,8 @@ $side_padding: 15px;
   height: calc(100% - 50px);
 }
 
-$sidebar_width: 200px;
-$feed_width: 250px;
+$sidebar_width: 0px;
+$feed_width: 300px;
 
 .sidebar, .feed, .calendar {
   position: absolute;
@@ -131,11 +131,12 @@ $feed_width: 250px;
 }
 
 .calendar {
-  left: $sidebar_width + $feed_width;
-  width: -moz-calc(100% - 450px);
-  width: -webkit-calc(100% - 450px);
-  width: -o-calc(100% - 450px);
-  width: calc(100% - 450px);
+  $width: $sidebar_width + $feed_width;
+  left: $width;
+  width: -moz-calc(100% - 300px);
+  width: -webkit-calc(100% - 300px);
+  width: -o-calc(100% - 300px);
+  width: calc(100% - 300px);
   //overflow-y: hidden;
 }
 
