--- a/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
@@ -1,5 +1,12 @@
 <div class="left">
+  <div class='left-search'>
+    <input placeholder="Search..."></input>
+  </div>
+  <ul class="search-list">
+    <li><a href="#browse/organizations">Organizations</a></li>
+    <li><a href="#browse/categories">Categories</a></li>
+    <li><a href="#browse/events">Events</a></li>
+  </ul>
 </div>
-<div class="main">
-  <h5>This is browse. It's where you discover events, organizations, and categories.</h5>
+<div class="main" id="browse-list">
 </div>
