--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,6 +1,8 @@
 #content
 
 :javascript
+  // Setting global event format string
+  window.formatString = "YYYY-MM-DD";
   Gandalf.currentUser = new Gandalf.Models.User();
   Gandalf.currentUser.url = '/me';
   Gandalf.currentUser.fetch({
