organizations and browse frameworks

--- a/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
@@ -1,4 +1,6 @@
-<div class="sidebar">
+<div class="left" id="organizations-list">
+  <div class="left-header">Your Organizations:</div>
+  <ul class="left-list"></ul>
 </div>
 <div class="main">
   Organization Management Tool
