--- a/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse.jst.ejs
@@ -2,7 +2,7 @@
   <div class='left-search'>
     <input placeholder="Search <%= type %>..."></input>
   </div>
-  <ul class="search-list">
+  <ul class="left-list">
     <li><a data-type='organizations' href="#browse/organizations">Organizations</a></li>
     <li><a data-type='categories' href="#browse/categories">Categories</a></li>
     <li><a data-type='events' href="#browse/events">Events</a></li>
