--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -1,9 +1,7 @@
 /* ========== LAYOUT ========= */
 
-.left-search input {
-  margin: 18px 15px;
-  padding: 8px;
-  width: 252px;
+.left-header {
+  padding: 15px;
   font-family: HN;
   
 }
@@ -20,22 +18,10 @@ li {
     @include transition(0.2s);
     &:hover {
       text-decoration: none;
-      color: black;
       @include linear-gradient(#efefef, #fafafa);
     }
     &.active {
       @include linear-gradient(#efefef, #efefef);
     }
-  }
-}
-
-#browse-list {
-  padding: 10px;
-  .browse-result {
-    display: inline-block;
-    width: 350px;
-    border: 1px solid #eee;
-    padding: 15px;
-    margin: 5px;
   }
 }
