--- a/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
@@ -2,6 +2,4 @@
   <div class="left-header">Your Organizations:</div>
   <ul class="left-list"></ul>
 </div>
-<div class="main">
-  Organization Management Tool
-</div>
+<div class="main"></div>
