--- a/app/assets/javascripts/backbone/templates/users/preferences.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/users/preferences.jst.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="left">
+  <div class="content-left">
   </div>
   <div class="middle">
     <h5>These are your preferences. You can handle subscription options here.</h5>
