--- a/app/assets/javascripts/backbone/templates/events/calendar_event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/calendar_event.jst.ejs
@@ -1,3 +1,3 @@
-<p><strong><%= event.get("name") %></strong></p>
+<p class='event-name'><strong><%= event.get("name") %></strong></p>
 <p>By: <%= event.get("organization") %></p>
 <p>At: <%= event.get("location") %> (ID: <%= event.get("id") %>)</p>
