--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -98,7 +98,7 @@ $o_padding: 3%;
   $width: 47%;
   width: $width;
   padding-left: $o_padding;
-  &:nth-of-type(2n-1) {
+  &:nth-of-type(2n+1) {
     padding-left: 0;
     width: $width + $o_padding;
   }
@@ -112,11 +112,11 @@ $o_padding: 3%;
   $width: 30%;
   width: $width;
   padding-left: $o_padding;
-  &:nth-of-type(3n-2) {
+  &:nth-of-type(3n+1) {
     padding-left: 0;
     width: $width + $o_padding;
   }
-  &:nth-of-type(3n-1) {
+  &:nth-of-type(3n+2) {
     left: $width;
     z-index: $cal_z - 1;
   }
