--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -41,5 +41,9 @@
     font-size: 13px;
     font-family: HNLight;
   }
+  &:hover {
+    background-color: #f5f5f5;
+  }
+  @include transition(background-color 0.2s);
 }
 
